[package]
name = "cbuildrt"
version = "0.1.2"
description = "Containerized Build Runtime"
license = "MIT"
authors = ["The Managarm Project <info@managarm.org>"]
repository = "https://github.com/managarm/cbuildrt"
edition = "2018"

[dependencies]
clap = "2.33"
libc = "0.2"
nix = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
