[package]
name = "cbuildrt"
version = "0.1.3"
description = "Containerized Build Runtime"
license = "MIT"
authors = ["The Managarm Project <info@managarm.org>"]
repository = "https://github.com/managarm/cbuildrt"
edition = "2018"

[dependencies]
clap = "2.33"
libc = "0.2"
nix = "0.20"
rustix = { version = "1.1.3", features = ["mount", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.25.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
