[package]
name = "cbuildrt"
version = "0.1.3"
description = "Containerized Build Runtime"
license = "MIT"
authors = ["The Managarm Project <info@managarm.org>"]
repository = "https://github.com/managarm/cbuildrt"
edition = "2018"

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
nix = { version = "0.31", features = ["fs", "mount", "process", "sched", "user"] }
rustix = { version = "1.1.3", features = ["mount", "net", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "3.25.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
